--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,8 @@ html {
 
 body {
 	background: var(--backgroundColor);
-	height: 110vh;
+	background-attachment: fixed;
+	height: 100vh;
 	max-width: var(--max-width);
 	margin: 0 auto;
 	font-family: var(--font);
@@ -89,7 +90,7 @@ Header
 	letter-spacing: var(--letter-spacing);
 }
 
-h1 {
+.score h1 {
 	font-size: 5rem;
 	margin: 0;
 	color: var(--dark-text);
@@ -120,6 +121,7 @@ Play
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 30px;
 }
 
 .play-container {
@@ -189,7 +191,7 @@ Play
 	right: 28%;
 }
 
-.rules {
+.rule {
 	margin-top: 2rem;
 	margin-right: 13rem;
 	font-size: 1.5rem;
@@ -202,6 +204,11 @@ Play
 	font-weight: 600;
 	line-height: 0;
 	align-self: flex-end;
+}
+
+.rule:hover {
+	border-color: hsl(189, 59%, 53%);
+	color: hsl(189, 59%, 53%);
 }
 
 @media screen and (max-width: 390px) {
@@ -249,14 +256,76 @@ Play
 		right: 50px;
 	}
 
-	.rules {
+	.rule {
 		font-size: 1.25rem;
 		align-self: center;
 		margin: 0;
 		margin-top: 70px;
 	}
 }
+/*
+===============
+Rules Modal
+===============
+*/
+.rules {
+	position: fixed;
+	top: 20%;
+	display: flex;
+	padding: 2.25rem;
+	background-color: var(--white);
+	flex-direction: column;
+	border-radius: 15px;
+	z-index: 1000;
+}
 
+.rules img {
+	width: 400px;
+}
+
+.rules-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 2rem;
+}
+
+.rules-header p {
+	font-size: 1.75rem;
+	margin: 0;
+	font-weight: 600;
+	color: var(--dark-text);
+}
+
+.rules-header img {
+	width: 25px;
+	height: 25px;
+}
+
+.rules-header img:hover {
+	width: 28px;
+	height: 28px;
+}
+
+.overlay {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+@media screen and (max-width: 390px) {
+	.rules {
+		top: 20%;
+	}
+
+	.rules > img {
+		width: 310px;
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+	}
+}
 /*
 ===============
 Result
