--- a/src/App.css
+++ b/src/App.css
@@ -334,12 +334,13 @@ Result
 .result {
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
 .result-container {
 	display: flex;
 	width: 70%;
-	height: 700px;
 	justify-content: center;
 }
 
@@ -374,6 +375,29 @@ Result
 	min-width: 100%;
 	min-height: 100%;
 	background: var(--white);
+}
+
+.winner {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.winner p {
+	font-size: 5rem;
+	font-weight: 700;
+	margin: 1rem;
+	color: var(--white);
+}
+
+.winner .play-again {
+	font-size: 1.25rem;
+	background-color: var(--white);
+	color: var(--dark-text);
+	padding: 0.75rem 4rem 0.75rem 4rem;
+	border-radius: var(--borderRadius);
+	letter-spacing: var(--letter-spacing);
+	font-weight: 600;
 }
 
 @media screen and (max-width: 768px) {
